fixed bugs with files

--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,6 @@
 <head>
 	<meta charset="UTF-8">
 	<title>BLUEASY</title>
-
-	<script src="path/to/jquery.js"></script> <!-- підключення jQuery -->
-  <script src="path/to/jquery.mmenu.js"></script> <!-- підключення jQuery.mmenu.js -->
-  <link href="path/to/jquery.mmenu.css" rel="stylesheet" /> <!-- підключення jQuery.mmenu.css -->
-
 	<!-- Chrome, firefox OS and Opera -->
 	<meta name="theme-color" content="#515f67">
 	<!-- Windows Phone -->
@@ -15,8 +10,7 @@
 	<!-- iOS Safari -->
 	<meta name="apple-mobile-web-app-status-bar-style" content="#515f67">
 
-	<style>body { opacity: 0; overflow-x: hidden; } html { background-color: #515f67; }</style> <!-- не дає завантажити body доки не завантажиться повністю css -->
-
+	<link href="css/style.css" rel="stylesheet" />
 </head>
 <body class="ishome">
 
@@ -24,7 +18,7 @@
 
       <div id="my-header"></div> <!-- записуємо код шапки -->
 
-				<header class="site-header" style="background-image: url(img/top-bg.jpg);">
+				<header class="site-header">
 					
 
 
@@ -35,7 +29,6 @@
 
    </div>
 
-<link rel="stylesheet" href="css/main.css">
-<script src="js/libs.min.js"></script>
+	<script src="js/libs.min.js"></script>
 </body>
 </html>
