--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,9 @@
 </head>
 <body class="ishome">
 	<div id="myPage">
-		<header class="site-header">
+		<header class="siteHeader">
 			<div class="mainHeader">
+				<div class="wrapper">
 					<div class="blueasy">
 						<h1>blu<span>e</span>asy</h1>
 					</div>
@@ -26,69 +27,79 @@
 						<a href="#myContent">portfolio</a>
 						<a href="#contact">contact</a>
 					</nav>
+				</div>
 			</div>
 			<div class="mainText"><h2><span>“I’m looking for the unexpected.</span></h2>
 				<h2><span>I’m looking for things I’ve never seen before.”</span></h2>
 			</div>
 			<div id="servises">
-				<h3><span>ser</span>vises</h3>
-				<table>
-					<tr>
-						<td><img src="img/logo/coffee.png" alt="Cofee" width="34" height="48"></td> 
-						<td><img src="img/logo/frame.png" alt="Frame" width="48" height="48"></td> 
-						<td><img src="img/logo/instant.png" alt="Instant" width="48" height="48"></td> 
-						<td><img src="img/logo/serious.png" alt="Serious" width="47" height="45"></td> 
-					</tr>
-					<tr>
-						<td>coffe</td><td>instant</td><td>serious</td><td>frame</td>
-					</tr>
-					<tr>
-						<td class="mainFootText">Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. 
-						Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</td>
-						<td class="mainFootText">Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. 
-						Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</td>
-						<td class="mainFootText">Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. 
-						Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</td>
-						<td class="mainFootText">Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. 
-						Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</td>
-					</tr>
-				</table>
+				<div class="wrapper">
+					<h3><span>ser</span>vises</h3>
+					<table>
+						<tr>
+							<td><img src="img/logo/coffee.png" alt="Cofee" width="34" height="48"></td> 
+							<td><img src="img/logo/frame.png" alt="Frame" width="48" height="48"></td> 
+							<td><img src="img/logo/instant.png" alt="Instant" width="48" height="48"></td> 
+							<td><img src="img/logo/serious.png" alt="Serious" width="47" height="45"></td> 
+						</tr>
+						<tr>
+							<td>coffe</td><td>instant</td><td>serious</td><td>frame</td>
+						</tr>
+						<tr>
+							<td class="servisesText">Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. 
+							Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</td>
+							<td class="servisesText">Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. 
+							Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</td>
+							<td class="servisesText">Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. 
+							Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</td>
+							<td class="servisesText">Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. 
+							Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 		</header>
 		<div id="myContent">
 			<div class="portfolioContent">
-				<div class="portfolioHeader">
-					<div class="portfolio">
-						<h3><span>por</span>tfolio</h3>
+				<div class="wrapper">
+					<div class="portfolioHeader">
+						<div class="portfolio">
+							<h3><span>por</span>tfolio</h3>
+						</div>
+						<nav>
+							<a href="">all</a>
+							<a href="">panoramas</a>
+							<a href="">portraits</a>
+							<a href="">macro</a>
+							<a href="">journal</a>
+						</nav>
 					</div>
-					<nav>
-						<a href="">all</a>
-						<a href="">panoramas</a>
-						<a href="">portraits</a>
-						<a href="">macro</a>
-						<a href="">journal</a>
-					</nav>
+					<table>
+						<tr><td><img src="img/small/portfolio_1s.jpg" alt="portfolio_1" width="270" height="270"><a href="" class="plus">+</a></td><td><img src="img/small/portfolio_2s.jpg" alt="portfolio_2" width="270" height="270"></td><td><img src="img/small/portfolio_3s.jpg" alt="portfolio_3" width="270" height="270"></td><td><img src="img/small/portfolio_4s.jpg" alt="portfolio_4" width="270" height="270"></td></tr>
+						<tr><td><img src="img/small/portfolio_5s.jpg" alt="portfolio_5" width="270" height="270"></td><td><img src="img/small/portfolio_6s.jpg" alt="portfolio_6" width="270" height="270"></td><td><img src="img/small/portfolio_7s.jpg" alt="portfolio_7" width="270" height="270"></td><td><img src="img/small/portfolio_8s.jpg" alt="portfolio_8" width="270" height="270"></td></tr>
+					</table>
 				</div>
-				<table>
-					<tr><td><img src="img/small/portfolio_1s.jpg" alt="portfolio_1" width="270" height="270"></td><td><img src="img/small/portfolio_2s.jpg" alt="portfolio_2" width="270" height="270"></td><td><img src="img/small/portfolio_3s.jpg" alt="portfolio_3" width="270" height="270"></td><td><img src="img/small/portfolio_4s.jpg" alt="portfolio_4" width="270" height="270"></td></tr>
-					<tr><td><img src="img/small/portfolio_5s.jpg" alt="portfolio_5" width="270" height="270"></td><td><img src="img/small/portfolio_6s.jpg" alt="portfolio_6" width="270" height="270"></td><td><img src="img/small/portfolio_7s.jpg" alt="portfolio_7" width="270" height="270"></td><td><img src="img/small/portfolio_8s.jpg" alt="portfolio_8" width="270" height="270"></td></tr>
-				</table>
-			</div>	
+			</div>
 			<div id="features" class="justDefaultSectionContent">
-				<iframe src="https://player.vimeo.com/video/166147749?title=0&byline=0&portrait=0" width="560" height="315" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				<h3><span>Jus</span>t default Section</h3>
-				<div>
-					<p>Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie.</p>
-					<p>Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes toffee.</p>
-					<button><a href="https://vimeo.com/166147749" target="_blank">visit me</a></button>
+				<div class="wrapper">
+					<iframe src="https://player.vimeo.com/video/166147749?title=0&byline=0&portrait=0" width="560" height="315" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+					<h3><span>Jus</span>t default Section</h3>
+					<div>
+						<p>Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie.</p>
+						<p>Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes toffee.</p>
+						<button><a href="https://vimeo.com/166147749" target="_blank">visit me</a></button>
+					</div>
 				</div>
 			</div>
 			<div class="twitter">
-				<img src="img/logo/twitter.png" alt="twitter" width="28" height="22">
-				<h3><span>twi</span>tter</h3>
-				<p>Unerdwear cookie liquorice. Cake donut cupcake lollipop soufflé candy. Chocolate oat cake <strong>@cheesecake</strong> tootsie roll.</p>
+				<div class="wrapper">
+					<img src="img/logo/twitter.png" alt="twitter" width="28" height="22">
+					<h3><span>twi</span>tter</h3>
+					<p>Unerdwear cookie liquorice. Cake donut cupcake lollipop soufflé candy. Chocolate oat cake <strong>@cheesecake</strong> tootsie roll.</p>
+				</div>
 			</div>
 			<div class="WhoIsContent">
+				<div class="wrapper">
 					<h3><span>Wh</span>o is john doe?</h3>
 					<div class="WhoIsTextLeft">
 						<p>Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie.</p>
@@ -103,41 +114,48 @@
 							<li><img src="img/logo/coffee2.png" alt="coffee2" width="31" height="24"></li>
 						</ul>
 					</div>
+				</div>
 			</div>
 			<div class="TestimonialsContent">
+				<div class="wrapper">
 					<p id="quotationMark">”</p>
 					<h3><span>Tes</span>timonials</h3>
 					<p class="TestimonialsContentText">Applicake chocolate cake wafer toffee pie soufflé wafer. Tart marshmallow wafer macaroon cheesecake jelly. Gingerbread cookie soufflé sweet roll sweet roll jelly-o.</p>
 					<p class="walter">-Walter White</p>
+				</div>
 			</div>
 			<div id="contact" class="contact">
-				<h3><span>co</span>ntact</h3>
-				<div class="contactText">
-					<p>Jujubes bear claw croissant wafer sweet lemon drops brownie chocolate bar. Sweet lollipop halvah tootsie roll cake fruitcake. Chocolate cake chocolate bar gingerbread lollipop tart. Jujubes bear claw donut chupa chups.</p>
-					<p>Linda Newman
-					<br>W325 State Road 123
-					<br>Mondovi, WI(Wisconsin) 98746-54321
-					<br>(715) 946 - 1234</p>
+				<div class="wrapper">
+					<h3><span>co</span>ntact</h3>
+					<div class="contactText">
+						<p>Jujubes bear claw croissant wafer sweet lemon drops brownie chocolate bar. Sweet lollipop halvah tootsie roll cake fruitcake. Chocolate cake chocolate bar gingerbread lollipop tart. Jujubes bear claw donut chupa chups.</p>
+						<p>Linda Newman
+							<br>W325 State Road 123
+							<br>Mondovi, WI(Wisconsin) 98746-54321
+							<br>(715) 946 - 1234</p>
+					</div>
+					<form action="formdata.php" method="POST" name="form1">
+						<div class="contactForm">
+								<p>full name</p>
+								<input class="formFocus" type="text" name="name" maxlength="20">
+								<p>email</p>
+								<input class="formFocus" type="text" name="email" maxlength="25">
+						</div>
+						<p class="message">message</p>
+						<textarea class="formFocus" name="message" id="message"></textarea>
+						<button type="submit">message</button>
+					</form>
 				</div>
-				<form action="formdata.php" method="POST" name="form1">
-				<div class="contactForm">
-					<p>full name</p>
-					<input class="formFocus" type="text" name="name" maxlength="20">
-					<p>email</p>
-					<input class="formFocus" type="text" name="email" maxlength="25">
-				</div>
-				<p class="message">message</p>
-				<textarea class="formFocus" name="message" id="message"></textarea>
-				<button type="submit">message</button>
-				</form>
 			</div>
 		</div>
-    <div id="myFooter">
-    	<p>2013 ©</p>
-    	<table>
-    		<tr><td><a href="#myPage">home</a></td><td><a href="#servises">servises</a></td><td><a href="#myContent">portfolio</a></td><td><a href="#contact">contact</a></td></tr>
-    	</table>
-    </div>
+		<div id="myFooter">
+			<div class="wrapper">
+				<p>2013 ©</p>
+				<table>
+					<tr><td><a href="#myPage">home</a></td><td><a href="#servises">servises</a></td><td><a href="#myContent">portfolio</a></td><td><a href="#contact">contact</a></td></tr>
+				</table>
+			</div>
+		</div>
   </div>
 	<script src="js/libs.min.js"></script>
 </body>
